--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-!**/src/main/resources/application.yml
+
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
@@ -35,3 +35,5 @@ out/
 
 ### VS Code ###
 .vscode/
+application.yml
+
