--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
 
     #    mysql? ??? ??? ?? ??? ?? ???.
     username: root
-    password: 1234
+    password: dkei380226
     #mariadb는 포트를 3307로했음
   thymeleaf:
     cache: false
