--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,11 +14,11 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
     #    ?? PC? ????? Database??? ?? ???.
     #url: jdbc:mariadb://localhost:3307/mariadb?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    url: jdbc:mariadb://localhost:3306/caffe
+    url: jdbc:mariadb://localhost:3307/mydb
 
     #    mysql? ??? ??? ?? ??? ?? ???.
     username: root
-    password: dkei380226
+    password: 123
     #mariadb는 포트를 3307로했음
   thymeleaf:
     cache: false
