--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
     //implementation 'com.github.iamport:iamport-rest-client-java:0.2.21' //portone 결제
     implementation 'com.github.iamport:iamport-rest-client-java:0.1.6'  //portone 결제
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1' // 최신 버전 사용
 }
 
 tasks.named('test') {
